google/oak: Add support for verstage
Add support for verstage

[pg: split original commit into multiple commits]

Change-Id: I8c9fe02f26bf8fa8381a7502a778bed300684986
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Original-Commit-Id: 2827aa08ff8712c0245a22378f3ddb0ca054255d
Original-Change-Id: I94a9ee2c00e25a37a92133f813d0cd11a3503656
Original-Signed-off-by: Yidi Lin <yidi.lin@mediatek.com>
Original-Reviewed-on: https://chromium-review.googlesource.com/292662
Original-Reviewed-by: Julius Werner <jwerner@chromium.org>
Reviewed-on: https://review.coreboot.org/13052
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/mainboard/google/oak/Makefile.inc
+++ b/src/mainboard/google/oak/Makefile.inc
@@ -18,6 +18,9 @@ bootblock-y += memlayout.ld
 bootblock-y += chromeos.c
 bootblock-y += boardid.c
 
+verstage-y += chromeos.c
+verstage-y += memlayout.ld
+
 romstage-y += chromeos.c
 romstage-y += romstage.c
 romstage-y += memlayout.ld
