--- a/src/mainboard/google/oak/Kconfig
+++ b/src/mainboard/google/oak/Kconfig
@@ -24,10 +24,12 @@ config BOARD_SPECIFIC_OPTIONS
 	select EC_GOOGLE_CHROMEEC_SPI
 	select MAINBOARD_HAS_NATIVE_VGA_INIT
 	select MAINBOARD_DO_NATIVE_VGA_INIT
+	select MAINBOARD_HAS_CHROMEOS
 
 config CHROMEOS
 	select CHROMEOS_VBNV_EC
 	select EC_SOFTWARE_SYNC
+	select VBOOT2_MOCK_SECDATA
 	select VIRTUAL_DEV_SWITCH
 
 config MAINBOARD_DIR
@@ -45,5 +47,13 @@ config DRAM_SIZE_MB
 config EC_GOOGLE_CHROMEEC_SPI_BUS
 	hex
 	default 0
+
+config DRIVER_TPM_I2C_BUS
+        hex
+	default 0x2
+
+config DRIVER_TPM_I2C_ADDR
+	hex
+	default 0x20
 
 endif # BOARD_GOOGLE_OAK
