--- a/src/soc/mediatek/mt8173/Makefile.inc
+++ b/src/soc/mediatek/mt8173/Makefile.inc
@@ -27,6 +27,7 @@ endif
 
 bootblock-y += gpio.c gpio_init.c pmic_wrap.c mt6391.c
 bootblock-y += wdt.c
+bootblock-y += mmu_operations.c
 
 ################################################################################
 
@@ -47,6 +48,7 @@ romstage-$(CONFIG_DRIVERS_UART) += uart.c
 romstage-y += cbmem.c
 romstage-y += spi.c
 romstage-y += gpio.c
+romstage-y += mmu_operations.c
 
 ################################################################################
 
