--- a/src/soc/mediatek/mt8173/Makefile.inc
+++ b/src/soc/mediatek/mt8173/Makefile.inc
@@ -31,6 +31,7 @@ bootblock-y += mmu_operations.c
 
 ################################################################################
 
+verstage-y += i2c.c
 verstage-y += spi.c
 
 verstage-$(CONFIG_DRIVERS_UART) += uart.c
