--- a/src/soc/mediatek/mt8173/Makefile.inc
+++ b/src/soc/mediatek/mt8173/Makefile.inc
@@ -56,11 +56,13 @@ romstage-y += mmu_operations.c
 ramstage-y += cbmem.c
 ramstage-y += spi.c
 ramstage-y += cbfs.c
-ramstage-y += soc.c
+ramstage-y += soc.c mtcmos.c
 ramstage-y += timer.c
 ramstage-$(CONFIG_DRIVERS_UART) += uart.c
+ramstage-y += pmic_wrap.c mt6391.c
 ramstage-y += gpio.c
 ramstage-y += wdt.c
+ramstage-y += pll.c
 
 ################################################################################
 
