--- a/src/northbridge/intel/x4x/Makefile.inc
+++ b/src/northbridge/intel/x4x/Makefile.inc
@@ -17,6 +17,8 @@
 ifeq ($(CONFIG_NORTHBRIDGE_INTEL_X4X),y)
 
 romstage-y += early_init.c
+romstage-y += raminit.c
+romstage-y += raminit_ddr2.c
 romstage-y += ram_calc.c
 
 ramstage-y += acpi.c
