--- a/src/soc/qualcomm/ipq40xx/Kconfig
+++ b/src/soc/qualcomm/ipq40xx/Kconfig
@@ -17,6 +17,10 @@ config CHROMEOS
 	select SEPARATE_VERSTAGE
 	select RETURN_FROM_VERSTAGE
 
+config IPQ_QFN_PART
+	bool "Is the SoC a BGA part or QFN part"
+	default n
+
 config MBN_ENCAPSULATION
 	depends on USE_BLOBS
 	bool "bootblock encapsulation for ipq40xx"
