console: Simplify bootblock console Kconfig selection logic
Instead of depending BOOTBLOCK_CONSOLE on a set of architectures,
allow the arch or platform to specify whether it can provide a C
environment. This simplifies the selection logic.

Change-Id: Ia3e41796d9aea197cee0a073acce63761823c3aa
Signed-off-by: Alexandru Gagniuc <alexandrux.gagniuc@intel.com>
Reviewed-on: https://review.coreboot.org/12871
Tested-by: build bot (Jenkins)
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/src/Kconfig
+++ b/src/Kconfig
@@ -271,6 +271,12 @@ config BOOTBLOCK_SOURCE
 	default "bootblock_simple.c" if BOOTBLOCK_SIMPLE
 	default "bootblock_normal.c" if BOOTBLOCK_NORMAL
 
+# To be selected by arch or platform if a C environment is available during the
+# bootblock. Normally this signifies availability of RW memory (e.g. SRAM).
+config C_ENVIRONMENT_BOOTBLOCK
+       bool
+       default n
+
 config SKIP_MAX_REBOOT_CNT_CLEAR
 	bool "Do not clear reboot count after successful boot"
 	default n
