--- a/src/arch/arm64/Kconfig
+++ b/src/arch/arm64/Kconfig
@@ -6,6 +6,7 @@ config ARCH_BOOTBLOCK_ARM64
 	bool
 	default n
 	select ARCH_ARM64
+	select C_ENVIRONMENT_BOOTBLOCK
 
 config ARCH_VERSTAGE_ARM64
 	bool
