--- a/src/arch/riscv/Kconfig
+++ b/src/arch/riscv/Kconfig
@@ -7,6 +7,7 @@ config ARCH_BOOTBLOCK_RISCV
 	default n
 	select ARCH_RISCV
 	select BOOTBLOCK_CUSTOM
+	select C_ENVIRONMENT_BOOTBLOCK
 
 config ARCH_VERSTAGE_RISCV
 	bool
