lib/Makefile.inc: Link hexdump.c in the bootblock as well
Change-Id: Id58f252e238cc3eb3fe9632493642d2a37c2a772
Signed-off-by: Alexandru Gagniuc <alexandrux.gagniuc@intel.com>
Reviewed-on: https://review.coreboot.org/12873
Tested-by: build bot (Jenkins)
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/src/lib/Makefile.inc
+++ b/src/lib/Makefile.inc
@@ -137,6 +137,7 @@ ramstage-y += imd_cbmem.c
 romstage-y += imd.c
 ramstage-y += imd.c
 
+bootblock-y += hexdump.c
 ramstage-y += hexdump.c
 romstage-y += hexdump.c
 
