intel/Kunimitsu: FAB 4 SPD changes
Updated Memory IDs and SKU IDs for FAB 4
Updated detection of single/dual channel memory to use SPD Index (Memory ID)
Added spd files for new dimms
Removed boardid.h as it is no longer needed

BUG=None
BRANCH=None
TEST=Tested on FAB4 SKU1 and SKU3

Change-Id: I60403c0e636ea28797d94cff9431af921631323e
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Original-Commit-Id: ce39dc3b0b9448635f878ce8c1aea5b4743594c4
Original-Change-Id: I870b3dfa2c4f358defb9263e759de477bb32e620
Original-Signed-off-by: Brandon Breitenstein <brandon.breitenstein@intel.com>
Original-Reviewed-on: https://chromium-review.googlesource.com/312546
Original-Commit-Ready: Freddy Paul <freddy.paul@intel.com>
Original-Tested-by: Freddy Paul <freddy.paul@intel.com>
Original-Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Original-Reviewed-by: Pratikkumar V Prajapati <pratikkumar.v.prajapati@intel.com>
Reviewed-on: https://review.coreboot.org/12590
Tested-by: build bot (Jenkins)
Reviewed-by: Stefan Reinauer <stefan.reinauer@coreboot.org>

--- a/src/mainboard/intel/kunimitsu/spd/Makefile.inc
+++ b/src/mainboard/intel/kunimitsu/spd/Makefile.inc
@@ -18,14 +18,14 @@ romstage-y += spd.c
 
 SPD_BIN = $(obj)/spd.bin
 
-SPD_SOURCES  = hynix_dimm_H9CCNNN8JTALAR-NUD-1G-1866    # 0b0000
-SPD_SOURCES += hynix_dimm_H9CCNNNBLTALAR-NUD-2G-1866    # 0b0001
-SPD_SOURCES += samsung_dimm_K4E8E304EE-EGCF-1G-1866     # 0b0010
-SPD_SOURCES += samsung_dimm_K4E6E304EE-EGCF-2G-1866     # 0b0011
-SPD_SOURCES += empty                                    # 0b0100
-SPD_SOURCES += empty                                    # 0b0101
-SPD_SOURCES += empty                                    # 0b0110
-SPD_SOURCES += empty                                    # 0b0111
+SPD_SOURCES  = hynix_dimm_H9CCNNN8JTALAR-NUD-1G-1866    # 0b0000 Dual Channel 4GB
+SPD_SOURCES += hynix_dimm_H9CCNNN8JTALAR-NUD-1G-1866    # 0b0001 Single Channel 2GB
+SPD_SOURCES += samsung_dimm_K4E8E304EE-EGCF-1G-1866     # 0b0010 Dual Channel 4GB
+SPD_SOURCES += samsung_dimm_K4E6E304EE-EGCF-2G-1866     # 0b0011 Dual Channel 8GB
+SPD_SOURCES += samsung_dimm_K4E8E304EE-EGCF-1G-1866     # 0b0100 Single Channel 4GB
+SPD_SOURCES += mic_dimm_EDF8132A3MA-JD-F-1G-1866        # 0b0101 Single Channel 4GB SPD FILE NOT HERE YET
+SPD_SOURCES += hynix_dimm_H9CCNNN8JTBLAR-NUD-1G-1866    # 0b0110 Dual Channel 4GB SPD FILE NOT HERE YET
+SPD_SOURCES += hynix_dimm_H9CCNNNBLTBLAR-NUD-2G-1866    # 0b0111 Dual Channel 8GB SPD FILE NOT HERE YET
 SPD_SOURCES += empty                                    # 0b1000
 SPD_SOURCES += empty                                    # 0b1001
 SPD_SOURCES += empty                                    # 0b1010
