--- a/src/mainboard/roda/rk9/Kconfig
+++ b/src/mainboard/roda/rk9/Kconfig
@@ -12,6 +12,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select HAVE_MP_TABLE
 	select CARDBUS_PLUGIN_SUPPORT
 	select HAVE_ACPI_TABLES
+	select HAVE_ACPI_RESUME
 	select EC_ACPI
 	select HAVE_OPTION_TABLE
 	select INTEL_INT15
